# stage_aware_ivf

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/data/: blastocyst.yaml  humanembryo2.yaml  hungvuong.yaml  quality_public.yaml
configs/experiment/: ablation.yaml  base.yaml  exp1_morph.yaml  exp4_morph_stage.yaml  exp4_quality_dataset_test.yaml  exp4_stage_only.yaml  exp4b.yaml  exp4c.yaml  external_dataset_test.yaml  external_dataset_test1.yaml  smoke.yaml
configs/model/: encoder.yaml  heads.yaml
docs/: PIPELINE.md  experiments.md
scripts/: abl_bin_utils.py  compare_domain_shift.py  eval_abl_bin.py  eval_external.py  export_results.py  make_quality_splits.py  merge_blastocyst_gardner.py  prepare_hungvuong_abl_splits.py  prepare_metadata_blastocyst.py  prepare_metadata_dataset_test.py  prepare_metadata_dataset_test1.py  prepare_metadata_humanembryo2.py  prepare_metadata_hungvuong.py  prepare_metadata_quality_public.py  prepare_splits.py  run_main_experiment.py  smoke_e2e.py  train_abl_bin.py  train_phase.py
src/ivf/: __init__.py  eval.py  eval_label_sources.py  losses.py  metrics.py
src/ivf/config/: __init__.py  constants.py  loader.py  schema.py
src/ivf/data/: __init__.py  datamodule.py  datasets.py  label_schema.py  splits.py  transforms.py
tests/: test_eval_label_sources.py  test_guardrails.py  test_hungvuong_adapter.py  test_hungvuong_train_block.py  test_joint_batch_shape.py  test_label_mapping.py  test_model_forward.py  test_morphology_masks.py  test_no_augmentation_in_eval.py  test_smoke_e2e.py
(+19 files in other folders)
